# veesem

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
resources/: veesem.desktop  veesem.rc
src/: CMakeLists.txt  main.cc
src/contrib/imgui/: CMakeLists.txt  imgui.cpp  imgui_memory_editor.h
src/core/: common.h
src/core/spg200/: adc.cc  adc.h  adpcm.cc  adpcm.h  bus_interface.h  cpu.cc  cpu.h  dma.cc  dma.h  extmem.cc  extmem.h  gpio.cc  gpio.h  irq.cc  irq.h  ppu.cc  ppu.h  random.cc  random.h  settings.h  spg200.cc  spg200.h  spg200_io.h  spu.cc  spu.h  timer.cc  timer.h  types.h  uart.cc  uart.h  watchdog.cc  watchdog.h
src/core/vsmile/: vsmile.cc  vsmile.h  vsmile_common.h  vsmile_joy.cc  vsmile_joy.h
src/ui/: graphics_state.cc  graphics_state.h  ui.cc  ui.h  version.h  wav_writer.cc  wav_writer.h
